--- a/NoMash-Library/.github/workflows/deploy.yml
+++ b/NoMash-Library/.github/workflows/deploy.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
 
     - name: Setup Node.js
-      uses: actions/setup-node@v2
+      uses: actions/setup-node@v4
       with:
-        node-version: '14'
+        node-version: '20'
 
     - name: Install dependencies
       run: npm ci
@@ -29,3 +29,6 @@ jobs:
       with:
         branch: gh-pages
         folder: dist
+
+permissions:
+  contents: write
